RISC-V: better error message when reporting unsupported satp modes

XMLWordPrintable

    • b08
    • riscv
    • linux

        ADDITIONAL SYSTEM INFORMATION :
        Debian Riscv64 in Qemu 7.2

        A DESCRIPTION OF THE PROBLEM :
        In said system the satp mode is sv57.
        The error message on startup is: "Unsupported satp mode: sv57" then the VM finishes.
        I had to dig in the sources to find out what this message means.
        In file "./src/hotspot/cpu/riscv/vm_version_riscv.cpp" I found this:
          // check if satp.mode is supported, currently supports up to SV48(RV64)
          if (get_satp_mode() > VM_SV48) {
            vm_exit_during_initialization(err_msg("Unsupported satp mode: %s", _vm_mode));
          }
        . Please add the information that only satp modes up to sv48 are supported.


              Assignee:
              Feilong Jiang
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: