8301067: RISC-V: better error message when reporting unsupported satp modes